[package]
name = "fork_union"
description = "Minimalistic scoped thread-pool designed for SIMT-style 'Fork-Join' parallelism"
version = "0.3.2"
edition = "2021"
authors = ["Ash Vardanian"]
license = "Apache-2.0"
repository = "https://github.com/ashvardanian/fork_union"

[lib]
path = "fork_union.rs"

[dependencies]
crossbeam-utils = "0.8.21"
