[package]
name = "fork_union"
description = "OpenMP-style cross-platform fine-grained parallelism library"
version = "1.0.4"
edition = "2021"
authors = ["Ash Vardanian"]
license = "Apache-2.0"
repository = "https://github.com/ashvardanian/fork_union"

[lib]
path = "fork_union.rs"

[profile.release]
opt-level = 3     # Corresponds to -O3
lto = true        # Enables Link Time Optimization for further optimizations
codegen-units = 1 # May increase compilation time but optimizes further
rpath = false     # On some systems, setting this to false can help with optimizations

[[example]]
name = "nbody"
path = "scripts/nbody.rs"
test = false
bench = false

[dev-dependencies]
rayon = "1.10"
rand = "0.9"
